# icpdas-xet7019z

./: README.md  setup.cfg
examples/: measure_voltage.py
examples/calibration/: ai_calibration.py  cjc_offset.py
examples/mqtt/: mqtt_client.py  mqtt_config.yaml  mqtt_control.py
src/xet7019z/: __init__.py  xet7019z.py
