[metadata]
name = icpdas-xet7019z
version = 0.0.1
author = James Ball
description = ICP DAS PET-7019Z/ET-7019Z control library
long_description = file: README.md
classifiers =
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12   
project_urls =
    homepage = https://github.com/jmball/icpdas-xet7019z

[options]
packages = find:
install_requires =
    pyModbusTCP
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src